fix: adjust footer spacing

--- a/app/routes/_index/styles.module.css
+++ b/app/routes/_index/styles.module.css
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 64px;
-	margin: 0px auto 72px;
+	margin: 0px auto 160px;
 }
 
 .section {
